generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["fullTextSearchPostgres", "relationJoins", "strictUndefinedChecks"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            Int       @id @default(autoincrement())
  email         String    @unique
  name          String
  created_at    DateTime  @default(now())
  authType      String
  lastLogin     DateTime?
  sidebarOpen   String[]
  boards        Board[]
  Docs          Docs[]
  shared_boards Board[]   @relation("sharedboards")
  docs          Docs[]    @relation("shareddocs")
}

model Docs {
  id            Int      @id @default(autoincrement())
  name          String
  text          String?
  shared        Boolean
  created_at    DateTime @default(now())
  boardid       Int
  ownerid       Int
  board         Board    @relation(fields: [boardid], references: [id], onDelete: Cascade)
  owner         User     @relation(fields: [ownerid], references: [id], onDelete: Cascade)
  shared_access User[]   @relation("shareddocs")
}

model Board {
  id            Int      @id @default(autoincrement())
  name          String
  shared        Boolean
  created_at    DateTime @default(now())
  description   String?
  ownerid       Int
  owner         User     @relation(fields: [ownerid], references: [id], onDelete: Cascade)
  docs          Docs[]
  shared_access User[]   @relation("sharedboards")
}
